--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/kevinarias2210/peliculas#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "sass": "^1.66.1"
   }
 }
